--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
       if (toggle && nav && bodypd && headerpd && logoImg) {
         toggle.addEventListener('click', () => {
 
-          nav.classList.toggle('show')
+          nav.classList.toggle('sideBarShow')
 
           toggle.classList.toggle('bx-x')
 
