--- a/public/index.html
+++ b/public/index.html
@@ -142,4 +142,9 @@
 
 </script>
 
+<script
+  type="text/javascript"
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPojoLrxvXkGhr-2D2V1xseiwDcleiFk4&libraries=places"
+/>
+
 </html>
