--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
+
   <link href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
@@ -142,9 +143,8 @@
 
 </script>
 
-<script
-  type="text/javascript"
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPojoLrxvXkGhr-2D2V1xseiwDcleiFk4&libraries=places"
-/>
+
+<script type="text/javascript"
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPojoLrxvXkGhr-2D2V1xseiwDcleiFk4&libraries=places" />
 
 </html>
