--- a/public/index.html
+++ b/public/index.html
@@ -143,8 +143,8 @@
 
 </script>
 
-
 <script type="text/javascript"
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPojoLrxvXkGhr-2D2V1xseiwDcleiFk4&libraries=places" />
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByaOTKNDsf3gqkxwZWYj08IRBt6mng210&libraries=places">
+  </script>
 
 </html>
